<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="string_empty"></string>
    <string name="app_name">Cwg GMC</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_myCollection">My collection</string>
    <string name="btn_searchInCatalog">Search in catalog</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_noAction">no action</string>
    <string name="title_activity_my_cwg">MyCwgActivity</string>
    <string name="title_activity_setting">Settings</string>

    <!-- setting -->
    <!-- login -->
    <string name="pref_loginValuesTitle">Login data</string>
    <string name="pref_loginUserSummary">Login user for app (is same as password to http://cwg.gcm.cz/) </string>
    <string name="pref_loginUserTitle">Login</string>
    <string name="pref_loginPasswordSummary">Password for login to app (is same as password to http://cwg.gcm.cz/)</string>
    <string name="pref_loginPasswordTitle">Password</string>
    <string name="pref_session">session</string>

    <!-- storage -->
    <string name="pref_storageTitle">Storage</string>
    <string name="pref_enableLocalDbSummary">Enable local database for faster loading. Data are updated ONLY by show detail item (experimental)</string>
    <string name="pref_enableLocalDbTitle">Enable local database</string>

    <!-- connection setting -->
    <string name="pref_connectionTitle">Connection</string>
    <string name="pref_alwaysOnlineTitle">Always online</string>
    <string name="pref_alwaysOnlineSummary">All data are downloaded from the Internet directly</string>
    <string name="pref_useCacheDataTitle">Use cache data</string>
    <string name="pref_useCacheDataSummary">If the data in the cache, use the without download from the intenet database. Manual updates may be used</string>

    <!-- menu -->
    <string name="button_getMyTitle">Get my</string>
    <string name="title_activity_api_loader">ApiLoaderActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_detail_cwg">DetailCwgActivity</string>

</resources>