<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="setting"
    android:title="@string/action_settings" >
    
    <PreferenceCategory 
        android:title="@string/pref_loginValuesTitle"
        android:key="setting_key_login"
        android:enabled="true" >
        <EditTextPreference
            android:key="pref_login"
            android:summary="@string/pref_loginUserSummary"
            android:title="@string/pref_loginUserTitle"
            android:hint="@string/pref_loginUserTitle"
            android:defaultValue="" />
        <EditTextPreference
            android:key="pref_password"
            android:summary="@string/pref_loginPasswordSummary"
            android:title="@string/pref_loginPasswordTitle"
            android:hint="@string/pref_loginPasswordTitle"
            android:defaultValue="" />
        
		<!-- TODO: DEBUG -->        
        <EditTextPreference
            android:key="session"
            android:title="Session"
            android:defaultValue="" />
    </PreferenceCategory>

    <PreferenceCategory 
        android:title="@string/pref_connectionTitle"
        android:key="setting_key_connection"
        android:enabled="true" >
        <CheckBoxPreference
            android:key="pref_alwaysOnline"
            android:summary="@string/pref_alwaysOnlineSummary"
            android:title="@string/pref_alwaysOnlineTitle"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="pref_useCacheData"
            android:summary="@string/pref_useCacheDataSummary"
            android:title="@string/pref_useCacheDataTitle"
            android:defaultValue="false" />
    </PreferenceCategory>
    <!-- 
    <PreferenceCategory 
        android:title="@string/pref_storageTitle"
        android:key="setting_key_storage"
        android:enabled="true" >
        <CheckBoxPreference
            android:key="pref_enableLocalDb"
            android:summary="@string/pref_enableLocalDbSummary"
            android:title="@string/pref_enableLocalDbTitle"
            android:hint="@string/pref_enableLocalDbSummary"
            android:defaultValue="false" />
    </PreferenceCategory>
     -->
</PreferenceScreen>