<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:clickable="false" >

        <Button
            android:id="@+id/myCollectionButton"
            style="@style/buttonStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:onClick="clickDefault"
            android:text="@string/btn_myCollection" />

        <Button
            android:id="@+id/searchInCatalogButton"
            style="@style/buttonStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:clickable="false"
            android:onClick="clickDefault"
            android:text="@string/btn_searchInCatalog" />

        <Button
            android:id="@+id/noActionBbutton"
            style="@style/buttonStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/myCollectionButton"
            android:onClick="clickDefault"
            android:text="@string/btn_noAction" />

        <Button
            android:id="@+id/settingsButton"
            style="@style/buttonStyle"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignTop="@+id/noActionBbutton"
            android:layout_toRightOf="@+id/noActionBbutton"
            android:onClick="clickDefault"
            android:text="@string/btn_settings" />
    </RelativeLayout>

    <EditText
        android:id="@+id/response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPostalAddress" >

        <requestFocus />
    </EditText>

</RelativeLayout>